# MindRAG

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
backend/: main.py
backend/api/v1/: admin.py  auth.py  chat.py  conversation.py  documents.py  recharge.py  search.py  upload.py  users.py
backend/clients/: elasticsearch_client.py  embedding_client.py  minio_client.py
backend/consumers/: file_processing.py
backend/core/: config.py  database.py  deps.py  exceptions.py  redis.py  security.py
backend/models/: chunk_info.py  conversation.py  conversation_session.py  document_vector.py  eval_run.py  file_upload.py  invite_code.py  model_provider_config.py  organization_tag.py  rate_limit_config.py  recharge_order.py  recharge_package.py  user.py  user_token_record.py
backend/prompts/: chat_system.md
backend/schemas/: auth.py  common.py
backend/services/: auth.py  chat.py  conversation.py  document.py  eval_rag.py  rate_limiter.py  search.py  token_cache.py  upload.py
backend/websocket/: chat_handler.py
docs/: RAG_ROADMAP.md
frontend/: .env.test  Dockerfile  package.json
frontend/src/constants/: invite-channel.ts
frontend/src/layouts/modules/global-footer/: index.vue
frontend/src/layouts/modules/theme-drawer/modules/: page-fun.vue
frontend/src/locales/langs/: en-us.ts  zh-cn.ts
frontend/src/theme/: settings.ts
frontend/src/views/chat/modules/: chat-message.vue  input-box.vue
frontend/src/views/org-tag/: index.vue
frontend/src/views/user/: index.vue
(+1 files in other folders)
